--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@shared-utils/*": ["packages/shared-utils/src/*"]
+      "@hakyung/x-bot-toolkit/*": ["packages/x-bot-toolkit/src/*"]
     },
     "lib": ["ES2020"]
   },
